# pr-review-agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
docs/: PROJECT_CONTEXT_FEATURE_PLAN.md
examples/: sample_project_context.md  sample_review_output.md
src/pr_review_agent/context/: __init__.py  loader.py  retriever.py
src/pr_review_agent/core/: graph.py  settings.py  state.py
src/pr_review_agent/fetchers/: azure_devops.py  base.py  factory.py  github.py  models.py  utils.py
src/pr_review_agent/llm/: anthropic_provider.py  base.py  factory.py  groq_provider.py  ollama_provider.py  openai_provider.py
src/pr_review_agent/llm/prompts/: bug_detection.py  performance.py  security.py  synthesis.py  test_coverage.py  unified.py
src/pr_review_agent/nodes/: analysis.py  fetch.py  file_analysis.py  output.py  synthesis.py
src/pr_review_agent/output/: json_formatter.py  markdown_formatter.py  models.py
src/pr_review_agent/ui/: cli.py  streamlit_app.py
tests/fixtures/: project_context.md  project_graph.json  sample_diff.txt  sample_pr_response.json
tests/integration/: test_full_graph.py
tests/unit/: test_azure_fetcher.py  test_context_loader.py  test_context_retriever.py  test_fetchers.py  test_imports.py  test_llm_providers.py  test_nodes.py
