[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-review-agent"
version = "0.1.0"
description = "Multi-pass agentic code review system with swappable PR sources and LLM backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "ollama>=0.3.0",
    "PyGithub>=2.3.0",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
    "click>=8.1.0",
    "streamlit>=1.38.0",
    "pygments>=2.18.0",
]

[project.optional-dependencies]
context = [
    "graphifyy>=0.3.0",
    "networkx>=3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.0",
    "syrupy>=4.7.0",
    "mypy>=1.11.0",
]

[project.scripts]
pr-review-agent = "pr_review_agent.ui.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_review_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external API access",
    "expensive: requires LLM API keys",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
